# pyRenamer

./: .editorconfig  .gitignore  NEWS  README.md  meson.build  meson_options.txt  meson_post_install.py  pyrenamer.doap  pyrightconfig.json
data/: digital.jose.pyRenamer.appdata.xml.in.in  digital.jose.pyRenamer.desktop.in.in  digital.jose.pyRenamer.gschema.xml  meson.build  pyrenamer.1
po/: POTFILES.in  en.po  es.po  fr.po
pyrenamer/: application.py  application_window.py  conf.py.in  file_browser.py  insert_delete_page.py  manual_page.py  meson.build  options_pane.py  paths.py  patterns_page.py  preferences.py  renamer.py  renaming_notebook.py  renaming_rules.py  substitutions_page.py  tree_file_browser.py  window_state.py
pyrenamer/resources/: meson.build  pyrenamer.gresource.xml
pyrenamer/resources/gtk/: help-overlay.ui  menus.ui
pyrenamer/resources/ui/: AboutDialog.ui  AddPatternDialog.ui  ApplicationWindow.ui  FileBrowser.ui  InsertDeletePage.ui  ManualPage.ui  OptionsPane.ui  PatternSelector.ui  PatternsEditorDialog.ui  PatternsPage.ui  PreferencesDialog.ui  RenamingNotebook.ui  SubstitutionsPage.ui  TreeFileBrowser.ui
